--- a/bio.html
+++ b/bio.html
@@ -20,7 +20,11 @@
 
     <section class="content">
         <h2>Who I Am</h2>
-        <p>I am a Front-End Web Development student at ALX Africa, passionate about creating modern, user-friendly websites.</p>
+        <p>I am a Front-End Web Development Student with a passion for creating responsive, visually appealing, and user-friendly websites. I have a solid foundation in HTML, CSS, and JavaScript and am continuously improving my skills in web development and UI/UX design.
+
+As a student, I am dedicated to learning and applying modern web technologies to build real-world projects. I also have experience in graphic design and video editing, which helps me create engaging digital experiences.
+
+I am eager to grow as a developer and contribute to innovative projects that solve real-world problems.</p>
     </section>
 
 </body>
