--- a/bio.html
+++ b/bio.html
@@ -26,6 +26,35 @@ As a student, I am dedicated to learning and applying modern web technologies to
 
 I am eager to grow as a developer and contribute to innovative projects that solve real-world problems.</p>
     </section>
+<div id="loader" style="display: none;">
+  <div class="spinner"></div>
+</div>
 
+<style>
+  #loader {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  .spinner {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #3498db;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+  }
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+      </style>
 </body>
 </html>
