--- a/bio.html
+++ b/bio.html
@@ -56,5 +56,20 @@ I am eager to grow as a developer and contribute to innovative projects that sol
     100% { transform: rotate(360deg); }
   }
       </style>
+<footer>
+    <p>&copy; 2025 Mzwakhe Obrey Mahaye. All rights reserved.</p>
+</footer>
+
+<style>
+  footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
+</style>
 </body>
 </html>
